[build-system]
requires = ["uv_build>=0.9.27,<0.12.0"]
build-backend = "uv_build"

[project]
name = "linker"
version = "0.1.0"
description = "linker is a tool to display cracked passwords from a NTDS file."
dependencies = []
requires-python = ">=3.10,<3.15"

authors = [{ name = "Marc Olivier Bergeron" }]
readme = "README.md"

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
linker = "linker.__main__:main"

[tool.uv.build-backend]
module-name = "linker"
module-root = ""

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
